# zero2prod

./: Cargo.toml  Makefile  README.md
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: fallback.rs  health_check.rs  mod.rs  subscriptions.rs  utils.rs
