[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.6.0-rc.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }